tool/src/c/snapshots/diplomat_tool__c__tests__cross_module_struct_fields@Bar_type.h.snap
---
source: tool/src/c/mod.rs
expression: out_texts.get(out).unwrap()
---
#ifndef Bar_type_H
#define Bar_type_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

typedef struct Foo Foo;
#ifdef __cplusplus
namespace capi {
#endif // __cplusplus

typedef struct Bar {
    Foo* y;
} Bar;
#ifdef __cplusplus
} // namespace capi
#endif // __cplusplus
#endif // Bar_type_H

