tool/src/c/snapshots/diplomat_tool__c__tests__cross_module_struct_fields@Foo_type.h.snap
---
source: tool/src/c/mod.rs
expression: out_texts.get(out).unwrap()
---
#ifndef Foo_type_H
#define Foo_type_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#include "Bar_type.h"
#ifdef __cplusplus
namespace capi {
#endif // __cplusplus

typedef struct Foo {
    Bar x;
} Foo;
#ifdef __cplusplus
} // namespace capi
#endif // __cplusplus
#endif // Foo_type_H

